feat!: upstream new web-build and i18n
Added support for native i18n.

Signed-off-by: Akshay Mestry <xa@mes3.dev>

--- a/docs/source/_static/css/override.css
+++ b/docs/source/_static/css/override.css
@@ -1,4 +1,4 @@
-#school h1 {
+/* #school h1 {
     text-align: center !important;
     width: auto !important;
 }
@@ -10,7 +10,7 @@
     padding: 0rem 3rem;
     text-align: center !important;
     width: auto !important;
-}
+} */
 
 .custom-footer {
     background-color: #f8f9fa;
